Adding flatmap examples